adding font-mono on h1 article, changing page title, adding geist_mono

--- a/app/global.css
+++ b/app/global.css
@@ -2,6 +2,11 @@
 @import 'fumadocs-ui/css/neutral.css';
 @import 'fumadocs-ui/css/preset.css';
 
+@theme inline {
+    --font-sans: 'Geist', sans-serif;
+    --font-mono: 'GeistMono', monospace;
+}
+
 :root {
     --fd-nav-height: 64px !important;
 }
